--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -68,13 +68,14 @@ p {
     float: right;
     margin-left: 25px;
 }
-
+ /* sizing the main content section of page */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* details sizing and position of aside section of page */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,12 +87,13 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* consolidated margin sizing and text color for aside section, commented out redundant code following */
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
+/* .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -99,14 +101,15 @@ p {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
-}
+} */
 
-.benefit-lead h3 {
+/* consolidated heading sizing and text alignment for aside section heading titles, commented out redundant code */
+.benefit-lead h3, .benefit-brand h3, .benefit-costh3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
+/* .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -114,15 +117,16 @@ p {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+} */
 
-.benefit-lead img {
+/* consolidate coding for image positiong and size in aside section, commented out redundant code below */
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
+/* .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -132,9 +136,10 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+} */
 
-.search-engine-optimization {
+/* consolidate coding sizing the sizing of main section, commented out redundant code */
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -143,7 +148,7 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
+/* .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -159,26 +164,28 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+}  */
 
-.search-engine-optimization img {
+/* consolidate common code for sizing the image, commented out redundant coding */
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+/* .online-reputation-management img {
     max-height: 200px;
-}
+} */
 
-.social-media-marketing img {
+/* .social-media-marketing img {
     max-height: 200px;
-}
+} */
 
-.search-engine-optimization h2 {
+/* consolidate code for sizing margin and font of headers of sections within main part of web page, commented out redundant code below */
+.search-engine-optimization h2, .search-engine-optimization h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
+/* .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -186,7 +193,7 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+} */
 
 .footer {
     padding: 30px;
